--- a/react-google-charts/package.json
+++ b/react-google-charts/package.json
@@ -33,8 +33,9 @@
     "webpack-dev-server": "^1.12.1"
   },
   "dependencies": {
-    "react": "^15.1.0",
-    "react-dom": "^15.1.0",
-    "react-google-charts": "^1.0.2"
+    "react": "^0.14.7",
+    "react-dom": "^0.14.7",
+    "react-google-charts": "^1.0.2",
+    "react-router": "^2.5.2"
   }
 }
